# dynamic-imports

./: .gitignore  README.md  pyproject.toml
dynamic_imports/: __init__.py  importers.py  search.py
tests/: test_importers.py  test_search.py
tests/pkg1/: mod1.py
tests/pkg1/pkg2/: mod2.py
