[tool.poetry]
name = "dynamic-imports"
version = "1.0.1"
description = "Dynamically discover and import Python modules, classes, and functions."
authors = ["Dan Kelleher <kelleherjdan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/djkelleher/dynamic-imports"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
